--- a/src/app/linker-sidebar/linker-sidebar.component.scss
+++ b/src/app/linker-sidebar/linker-sidebar.component.scss
@@ -7,7 +7,6 @@ mat-sidenav-container {
 mat-sidenav {
   width: 240px;
   transition: width 0.3s ease;
-  
 }
 
 mat-sidenav-content {
@@ -15,39 +14,35 @@ mat-sidenav-content {
   flex-direction: column;
 }
 
-.sidebar-content,
-.collapsed-icon-menu {
+.sidebar-content {
   display: flex;
   flex-direction: column;
   height: 100%;
   overflow: hidden;
-}
-
-.sidebar-content {
   justify-content: space-between;
 }
 
-.sidebar-menu,
-.collapsed-icon-menu {
+.sidebar-menu {
+  padding-left: 16px;
   display: flex;
   flex-direction: column;
   gap: 0.75rem;
 }
 
-.sidebar-menu {
-  padding-left: 16px;
-}
-
 .collapsed-icon-menu {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  overflow: hidden;
   align-items: center;
   padding-top: 1rem;
+  gap: 0.75rem;
 }
 
 .sidebar-menu button,
 .collapsed-icon-menu button {
   color: #002E5D;
   display: flex;
-  align-items: center;
   gap: 10px;
 }
 
@@ -85,5 +80,4 @@ mat-sidenav-content {
   width: 92%;
   margin-top: 1rem;
   height: 60px;
-  align-items: center;
 }
