--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 
 
-// *, *::before, *::after {
-//     box-sizing: border-box;
-// }
+*, *::before, *::after {
+    box-sizing: border-box;
+}
 
 body {
     font-family: 'Public Sans', 'Noto Sans', 'Open Sans', Helvetica, Arial, sans-serif;
