Shadow fixes, Code styling

--- a/src/app/linker-sidebar/linker-sidebar.component.html
+++ b/src/app/linker-sidebar/linker-sidebar.component.html
@@ -1,6 +1,6 @@
 <!-- linker-sidebar.component.html -->
 <mat-sidenav-container>
-  <mat-sidenav #sidenav mode="side" class="grey-container" opened>
+  <mat-sidenav #sidenav mode="side" opened>
     <div class="sidebar-content">
       <!-- Full nav when open -->
       <div class="sidebar-menu">
