--- a/src/app/byu-header/byu-header.component.html
+++ b/src/app/byu-header/byu-header.component.html
@@ -1,58 +1,54 @@
 <!-- byu-header.component.html -->
 <header>
-    <div class="header-top" >
+    <div class="header-top">
         <div class="logo">
             <img class="styled-image" src="/BYU_monogram_white@2x.png" alt="Image Description">
         </div>
-        <div class="Header-titles"> 
+        <div class="Header-titles">
             <div class="breadcrumbs">
-                @for (breadcrumb of config()?.breadcrumbs; track breadcrumb.text){
-                    <a routerLink="{{breadcrumb.path}}" >{{breadcrumb.text}}</a>
+                @for (breadcrumb of config()?.breadcrumbs; track breadcrumb.label){
+                <a routerLink="{{breadcrumb.path}}">{{breadcrumb.label}}</a>
                 }
             </div>
-            <div class ="title-containers">
-                <h1 class="byu-title">{{config()?.title?.text}}</h1>
-                <h2 class="byu-subtitle">{{config()?.subtitle?.text}}</h2>
+            <div class="title-containers">
+                <h1 class="byu-title">{{config()?.title?.label}}</h1>
+                <h2 class="byu-subtitle">{{config()?.subtitle?.label}}</h2>
             </div>
         </div>
         <div class="signin">
-          <svg class="signin-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
-            <path fill="currentcolor" d="M50 95c-26 0-34-18-34-18 3-12 8-18 17-18 5 5 10 7 17 7s12-2 17-7c9 0 14 6 17 18 0 0-7 18-34 18z"></path>
-            <circle cx="50" cy="50" r="45" fill="none" stroke="currentcolor" stroke-width="10"></circle>
-            <circle fill="currentcolor" cx="50" cy="40" r="20"></circle>
-          </svg>
+            <svg class="signin-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
+                <path fill="currentcolor"
+                    d="M50 95c-26 0-34-18-34-18 3-12 8-18 17-18 5 5 10 7 17 7s12-2 17-7c9 0 14 6 17 18 0 0-7 18-34 18z">
+                </path>
+                <circle cx="50" cy="50" r="45" fill="none" stroke="currentcolor" stroke-width="10"></circle>
+                <circle fill="currentcolor" cx="50" cy="40" r="20"></circle>
+            </svg>
             <a class="signin-link" href="/">Sign In</a>
         </div>
     </div>
-    <div class="header-bottom">
-        <nav class="header-nav">
-            @for (menuItem of config()?.menu; track menuItem.text){>
-                @if (isHeaderLink(menuItem)) {
-                 <li class = "header-nav-item">
-                    <!--getting an error because it is a union type which means a headerMenu can either be a HeaderLink or a group wiwth  items | -->
-                    <a class="header-nav-item-content"
-                    routerLink="{{menuItem.path}}" >{{menuItem.text}}</a>
-                 </li>
-                 <!--if there is a drop down menu-->
-                } @else {
-                    <li class="header-nav-item-dropdown" (click)="toggleDropdown(menuItem.text)">
-                        <div class="header-nav-item-content" >
-                            {{ menuItem.text }}
-                        </div>
-                        <ul class = "dropdown-item-menu" *ngIf="openDropdownText === menuItem.text"> 
-                        @for(dropItem of menuItem.items; track dropItem.text){
-                            <li class = "dropdown-item">
-                                <a class="dropdown-item-content"
-                                    routerLink="{{ dropItem.path }}">{{ dropItem.text }}
-                                </a>
-                            </li>
-                        }
-                        </ul>
-                    </li>
+    <nav>
+        @for (menuItem of config()?.menu; track menuItem.label){
+        @if (isHeaderLink(menuItem)) {
+        <!--getting an error because it is a union type which means a headerMenu can either be a HeaderLink or a group wiwth  items | -->
+        <a routerLink="{{menuItem.path}}">{{menuItem.label}}</a>
+        <!--if there is a drop down menu-->
+        } @else {
+        <a (click)="toggleDropdown(menuItem.label)">
+            {{ menuItem.label }}
+            <ul class="dropdown-item-menu" [hidden]="!dropdownStates()[menuItem.label]">
+                @for(dropItem of menuItem.items; track dropItem.label){
+                <li>
+                    <a class="dropdown-item-content" routerLink="{{ dropItem.path }}">
+                        {{ dropItem.label }}
+                    </a>
+                </li>
                 }
-            }
-        </nav>
-    </div>
+            </ul>
+        </a>
+        <div class="scrim" [hidden]="!dropdownStates()[menuItem.label]" (click)="toggleDropdown(menuItem.label)"></div>
+    }
+}
+    </nav>
 </header>
 <!-- 
 input() is used to bind input properties with signals.
