--- a/src/app/byu-header/byu-header.component.html
+++ b/src/app/byu-header/byu-header.component.html
@@ -2,7 +2,7 @@
 <header>
     <div class="header-top" >
         <div class="logo">
-            <img class="styled-image" src="/BYU_monogram_white@2x.png" alt="Image Description">
+            <img class="styled-image" src="/BYU_monogram_white@2x.png" alt="BYU">
         </div>
         <div class="Header-titles"> 
             <div class="breadcrumbs">
