--- a/src/app/byu-header/byu-header.component.scss
+++ b/src/app/byu-header/byu-header.component.scss
@@ -1,3 +1,5 @@
+@import '../../variables.scss';
+
 //byu-header.component.scss
 header {
   position: sticky; // keep header fixed at top while scrolling
@@ -27,6 +29,7 @@ header {
     }
     img {
       height: 40px;
+      margin:10px;
       align-items: center;
     }
     // TODO: making columns!
@@ -84,25 +87,20 @@ header {
       left: 0;
       top: 13%;
     }
-    .title-containers {
-      display: flex;
-      flex-direction: column;
-      text-align: left;
-
       .byu-title {
         font-size: 24px;
-        margin-top: 0;
-        margin-bottom: 0;
+        margin-top: 3px;
+        margin-bottom: 1px;
         font-weight: 500;
       }
 
       .byu-subtitle {
-        margin-top: 0;
-        margin-bottom: 0;
+        margin-top: 2px;
+        margin-bottom: 1px;
         font-size: 1.3rem;
         font-weight: 300;
       }
-    }
+  
 
     .right {
       display: flex;
@@ -137,12 +135,11 @@ header {
     a {
       display: flex;
       align-items: center;
-      gap: 20px;
+      gap: 10px;
       text-decoration: none;
       text-wrap: nowrap;
       position: relative;
       color: #002e5d;
-      margin: 0;
       padding: 11px 25px;
 
       > ul {
@@ -162,6 +159,17 @@ header {
 
       .rotate{
         transform: rotate(180deg);
+      }
+
+      &.dropdown::after {
+        content: "";
+        display: block;
+        width: 7px;
+        aspect-ratio: 1 / 1;
+        border-bottom: 2px solid $byu-muted-color;
+        border-right: 2px solid $byu-muted-color;
+        border-bottom-right-radius: 1px; 
+        transform: translateY(-25%) rotate(45deg);
       }
     }
 
