--- a/src/app/byu-header/byu-header.component.html
+++ b/src/app/byu-header/byu-header.component.html
@@ -15,6 +15,7 @@
         </div>
 
         <div class="right">
+            <div class = "signin-container">   
             <svg class="signin-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
                 <path fill="currentcolor"
                     d="M50 95c-26 0-34-18-34-18 3-12 8-18 17-18 5 5 10 7 17 7s12-2 17-7c9 0 14 6 17 18 0 0-7 18-34 18z">
@@ -23,6 +24,12 @@
                 <circle fill="currentcolor" cx="50" cy="40" r="20"></circle>
             </svg>
             <a class="signin-link" href="/">Sign In</a>
+        </div>
+            <div class ="hamburger-menu">
+                <div class="bar"></div>
+                <div class="bar"></div>
+                <div class="bar"></div>
+            </div>
         </div>
     </div>
     <nav>
